# mpEDM

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  block.hpp  dataset.cc  dataset.hpp  edm_knn.cc  edm_nearest_neighbors.cc  knn_kernel.hpp  knn_kernel_cpu.hpp  knn_kernel_gpu.hpp  knn_kernel_multi_gpu.hpp  lut.hpp  main.cpp  nearest_neighbors.cc  nearest_neighbors.h  nearest_neighbors.hpp  nearest_neighbors_cpu.cc  nearest_neighbors_cpu.h  nearest_neighbors_cpu.hpp  nearest_neighbors_gpu.cc  nearest_neighbors_gpu.h  nearest_neighbors_gpu.hpp  nearest_neighbors_multi_gpu.cc  nearest_neighbors_multi_gpu.h  nearest_neighbors_multi_gpu.hpp
.github/workflows/: codeql.yml  main.yml
scripts/: .gitignore  csv2h5.py  h52csv.py  preprocessGMN.py  preprocess_gmn.py  requirements.txt
src/: ccm_bench.cc  cross_mapping.h  cross_mapping_bench.cc  cross_mapping_cpu.cc  cross_mapping_cpu.h  cross_mapping_gpu.cc  cross_mapping_gpu.h  cross_mapping_mpi_bench.cc  data_frame.cc  data_frame.h  dataframe.cc  dataframe.h  dataset.cc  dataset.h  edm_nearest_neighbors.cc  embedding_dim.h  embedding_dim_cpu.cc  embedding_dim_cpu.h  embedding_dim_gpu.cc  embedding_dim_gpu.h  knn_bench.cc  lookup_bench.cc  lut.cc  lut.h  mpi_common.h  mpi_master.cc  mpi_master.h  mpi_test.cc  mpi_worker.cc  mpi_worker.h  nearest_neighbors.h  nearest_neighbors_cpu.cc  nearest_neighbors_cpu.h  nearest_neighbors_gpu.cc  nearest_neighbors_gpu.h  simplex.h  simplex_bench.cc  simplex_cpu.cc  simplex_cpu.h  simplex_gpu.cc  (+5 more)
test/: anchovy_sst_verification_E3.csv  cross_mapping_test.cc  knn_test.cc  knn_test_validation.xlsx  knn_test_verification.xlsx  knn_test_verification_E2.csv  knn_test_verification_E3.csv  knn_test_verification_E4.csv  knn_test_verification_E5.csv  lut_test.cc  lut_test_verification.xlsx  simplex_test.cc  xmap_all_to_all_test.cc  xmap_one_to_one_test.cc
